# RESTserverApplication

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  plan.md  requirements.md  server.cpp  task_tracker_swagger.yaml  todo.md
headers/: boost_namespaces.hpp  database.hpp  handle_request.h  listener.h  listener.hpp  namespaces.h  requests_handler.hpp  server.h  server.hpp  session.h  session.hpp
src/: database.cpp  handle_request.cpp  listener.cpp  server.cpp  session.cpp
